--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -1,164 +1,42 @@
-﻿<div class="jumbotron">
-    <div class="card text-white bg-danger mb-2">
-        <div class="card-header">Welcome to the College Manager</div>
-        <div class="card-body">
-            <h5 class="card-title">College Manager</h5>
-            <p class="card-text">In this system you will be able to manage your college like no other.</p>
-            <div class="btn-div">
-            </div>
+﻿<div class="w-full bg-white flex h-5/6 mt-20 bg-gray-50 rounded-lg shadow-2xl">
+    <div class="w-1/2 h-5/6 flex-col ">
+        <div class="w-4/5 text-center h-2/6 flex items-center justify-center text-6xl font-black mx-auto leading-tight">
+            Make managing your college easier
+        </div>
+        <div class="w-3/5 text-center h-1/6 flex items-center justify-center mx-auto text-2xl leading-relaxed">
+            With College Manager everything becomes easier in managing your college, with options for registering, editing and deleting the necessary tools.
+        </div>
+        <div class="w-4/6 text-center mx-auto h-1/6 flex items-center justify-center">
+            <button type="button" class="w-4/6 inline-block rounded-full px-6 py-5 bg-yellow-500 text-white font-medium text-xl leading-tight shadow-md hover:bg-yellow-600 hover:shadow-lg focus:bg-yellow-600 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-yellow-700 active:shadow-lg transition duration-150 ease-in-out">
+                @Html.ActionLink("Start Using", "Index", "Guide")
+            </button>
         </div>
     </div>
-
-    <div class="card text-white bg-primary mb-4">
-        <div class="card-body" style="margin-bottom: 2em;">
-            <h5 class="card-title">Let''s start using?</h5>
-            <p class="card-text">Before you start using this system, take a look at the guide..</p>
-            <div class="btn-div">
-                <a href="~/Guide"><button id="btn-start" style="width: 65%; border: none;" type="button" class="btn btn-info">Start</button></a>
-            </div>
-        </div>
-
-        <div class="card text-white bg-danger mb-3" style="max-width: 27rem; margin-left: 1.5em;color: #0d1117;">
-            <div class="card-header">Teachers</div>
-            <hr style="border-top: 1px solid red;" />
-            <div class="card-body">
-                <p class="card-text">Register teachers in courses.</p>
-                <div class="btn-div">
-                    <a href="~/Teacher"> <button type="button" class="btn btn-danger">Check out</button></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card text-white bg-warning mb-3" style="max-width: 27rem; color: #0d1117;">
-            <div class="card-header">Students</div>
-            <hr style="border-top: 1px solid orange;" />
-            <div class="card-body">
-                <p class="card-text">Keep track of student data.</p>
-                <div class="btn-div">
-                    <a href="~/Student"> <button type="button" class="btn btn-warning">Check out</button></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card text-white bg-info mb-3" style="max-width: 27rem; color: #0d1117;">
-            <div class="card-header">Courses</div>
-            <hr style="border-top: 1px solid #032030;" />
-            <div class="card-body">
-                <p class="card-text">Register many courses.</p>
-                <div class="btn-div">
-                    <a href="~/Courses"><button type="button" class="btn btn-primary">Check out</button></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card text-white bg-success mb-3" style="max-width: 27rem; color: #0d1117;">
-            <div class="card-header">Subjects</div>
-            <hr style="border-top: 1px solid green;" />
-            <div class="card-body">
-                <p class="card-text">Register new subjects for the courses.</p>
-                <div class="btn-div">
-                    <a href="~/Subject"> <button type="button" class="btn btn-success">Check out</button></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card text-white bg-success mb-3" style="max-width: 27rem; background: #edc0e1; color: #0d1117; ">
-            <div class="card-header">Grades</div>
-            <hr style="border-top: 1px solid hotpink;" />
-            <div class="card-body">
-                <p class="card-text">Review grades in subjects.</p>
-                <div class="btn-div">
-                    <a href="~/Grade"><button type="button" style="background: hotpink; border: none;" class="btn btn-success">Check out</button></a>
-                </div>
-            </div>
-        </div>
+    <div class="vector w-2/3 h-full">
     </div>
-
+</div>
+<div class="w-full flex items-center justify-center h-20 py-10 mt-16">
+    <div class="flex justify-center items-center">
+        <img class="h-20" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/CurtinUni_Logo.svg/1200px-CurtinUni_Logo.svg.png" alt="Alternate Text" />
+    </div>
+    <div class="flex justify-center items-center ml-12 py-2">
+        <img class="h-20" src="https://logodownload.org/wp-content/uploads/2021/04/university-of-cambridge-logo.png" alt="Alternate Text" />
+    </div>
+    <div class="flex justify-center items-center ml-12 py-2">
+        <img class="h-20" src="https://collegecore.com/wp-content/uploads/2018/03/U-of-T-Logo-Blue-Horiz.png" alt="Alternate Text" />
+    </div>
+    <div class="flex justify-center items-center ml-12 py-2">
+        <img class="h-20" src="https://comcept.org/wp-content/uploads/2016/12/ULISBOA_HORIZONTAL_RGB.png" alt="Alternate Text" />
+    </div>
+    <div class="flex justify-center items-center ml-12 py-2">
+        <img class="h-20" src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Logoup.jpg" alt="Alternate Text" />
+    </div>
 </div>
 
-
 <style>
-    * {
-        font-weight: 300;
-    }
-
-    #btn-start {
-        background: rgb(255,46,0);
-        background: linear-gradient(90deg, rgba(255,46,0,1) 4%, rgba(200,187,34,1) 33%, rgba(4,95,173,1) 60%, rgba(74,144,7,1) 89%);
-    }
-
-    h2 {
-        font-size: 4rem;
-        color: #C9D1D9;
-    }
-
-    .card-title {
-        text-align: center;
-        font-weight: 300;
-        font-size: 1.2em !important;
-    }
-
-    .card-text {
-        text-align: center;
-        font-weight: 300;
-        font-size: 1em !important;
-    }
-
-    .jumbotron {
-        padding: 1em;
-        width: 68%;
-        margin: auto;
-        height: 70em;
-        margin-bottom: 5rem;
-        background: #13181f;
-    }
-
-    .card-header {
-        font-weight: 700;
-        font-size: 1.3em;
-        text-align: center;
-    }
-
-    .btn-div {
-        text-align: center;
-    }
-
-    button {
-        margin: auto;
-        border: none;
-        width: 70%;
-    }
-
-        button:focus {
-            outline: none;
-        }
-
-    .mb-2 {
-        background-image: url('https://images.unsplash.com/20/cambridge.JPG?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1030&q=80');
+    .vector {
+        background-image: url('../../Assets/Vectors/undraw_teaching_re_g7e3.svg');
+        background-size: contain;
         background-repeat: no-repeat;
-        background-size: cover;
-        padding: 2em;
-        max-width: 116.3rem;
-        margin-left: 0.5em;
-        /*margin-top: 27rem;*/
-        height: 56rem;
-        border-radius: 10px 10px 0px 0px;
-    }
-
-
-    .mb-4 {
-        max-width: 116.3rem;
-        margin-left: 0.518em;
-        background: #0d1117;
-        padding-top: 1em;
-        margin-bottom: 2em;
-        height: 35rem;
-    }
-
-    .mb-3 {
-        border-radius: 10px;
-        padding: 1%;
-        float: left;
-        margin: 0.7em;
     }
 </style>
