--- a/CollegeManager/Views/Shared/_Layout.cshtml
+++ b/CollegeManager/Views/Shared/_Layout.cshtml
@@ -4,11 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Manager </title>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background: #161b22; border: none;">
+<body class="bg-white h-screen">
+    <div class="navbar navbar-fixed-top bg-white border-0 text-gray-700">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,23 +23,23 @@
                 @Html.ActionLink("College Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Teacher", "Index", "Teacher")</li>
-                    <li>@Html.ActionLink("Students", "Index", "Student")</li>
-                    <li>@Html.ActionLink("Course", "Index", "Course")</li>
-                    <li>@Html.ActionLink("Subjects", "Index", "Subject")</li>
-                    <li>@Html.ActionLink("Grades", "Index", "Grade")</li>
-                    <li>@Html.ActionLink("Guide", "Index", "Guide")</li>
+                <ul class="nav navbar-nav float-right">
+                    <li class="mr-6">@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li class="mr-4">@Html.ActionLink("Teacher", "Index", "Teacher")</li>
+                    <li class="mr-4">@Html.ActionLink("Students", "Index", "Student")</li>
+                    <li class="mr-4">@Html.ActionLink("Course", "Index", "Course")</li>
+                    <li class="mr-4">@Html.ActionLink("Subjects", "Index", "Subject")</li>
+                    <li class="mr-4">@Html.ActionLink("Grades", "Index", "Grade")</li>
+                    <li class="">@Html.ActionLink("Guide", "Index", "Guide")</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content" style="width: 100%; padding-top: 3em; padding-left: 0; ">
+    <div class="container body-content w-full h-5/6">
         @RenderBody()
-        <footer style="bottom: 0; position: fixed; height: 5rem; padding: 1em; text-align: center; width: 100%; background: #161b22; ">
-            <p style="color: white;">&copy; @DateTime.Now.Year Débora Ferreira@MagniFinance</p>
-        </footer>
+        @*<footer style="bottom: 0; position: fixed; " class="w-full">
+                <p style="color: white;">&copy; @DateTime.Now.Year Débora Ferreira@MagniFinance</p>
+            </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/angular");
@@ -44,3 +48,9 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+<style>
+    * {
+        font-family: "Goudy Bookletter 1911", sans-serif;
+    }
+</style>
