--- a/CollegeManager/Views/Guide/Index.cshtml
+++ b/CollegeManager/Views/Guide/Index.cshtml
@@ -1,50 +1,44 @@
-﻿<div class="jumbotron" style=" width: 65%; margin: auto; margin-bottom: 5rem; text-align: center; padding: 1em 3em; background: #161b22; ">
-    <h1>Guide</h1>
+﻿<div class="jumbotron mt-16 w-5/6 mx-auto bg-gray-50 shadow-2xl">
+    <h2 class="text-center text-gray-700 text-7xl font-bold">Guide</h2>
     <div style="text-align:justify;">
         <div style="text-align: center;">
             <br />
             <b style=" width: 90% !important; margin: auto;text-align: center;color: #f76075; font-size: 0.97em;">(Before you start using the system, check your project's packages, make sure the package is up to date.)</b>
         </div>
         <br />
-        <p class="lead">
+        <p class="lead p-6 leading-loose text-gray-600">
             To build the project, you need to run the sql scripts, which is located in the folder Sql_Scripts, <b>Make sure the 'Show all files' option in the Solution menu is enabled.</b>
-            <br> <span style="margin-left: 2em;">➪ Run the scripts 001 to create the tables</span>
-            <br> <span style="margin-left: 2em;">➪ Run the scripts 002 to insert data into the table</span>
+            <br> <span style="margin-left: 2em;">➪ Run the scripts Script.sql to create the tables</span>
         </p>
     </div>
     <div style="text-align:justify; margin-left: 2em;">
-        <p class="lead">
+        <p class="lead p-6 leading-loose text-gray-600">
             Using the system
             <br> <span style="margin-left: 2em;">1. To start, register teachers, input their names, birthday and salary.</span>
             <br> <span style="margin-left: 2em;">2. With registered teachers, you can now create courses.</span>
             <br> <span style="margin-left: 2em;">3. To feed the courses, also create the coherent subjects.</span>
             <br> <span style="margin-left: 2em;">4. Finally, you can add students and record their grades in enrolled courses.</span>
-            <br> <div style="font-size: 1.07em !important; color: #c5c5c7; font-weight: 300; margin-left: 1em; "> And that's it, now your system is ready to use! （˶′◡‵˶） </div>
+            <br> <div style="font-size: 1.07em !important; font-weight: 300; margin-left: 1em; "> And that's it, now your system is ready to use! （˶′◡‵˶） </div>
         </p>
     </div>
     <br />
     <div style="text-align:justify; margin-left: 3em;">
         <hr />
         <br />
-        <div style="font-size: 1.07em !important; color: #c5c5c7; font-weight: 300; margin-left: 1em; margin-bottom: 3em;">
+        <div style="font-size: 1.07em !important; font-weight: 300; margin-left: 1em; margin-bottom: 3em;">
             Check out my Portfolio and some of the sites I've done!  (・ω・)b）<br><br>
-            <a href="https://debora.netlify.app/" target="_blank"><button type="button" shadow-none class="btn btn-primary">  Let's go</button></a>
-           
+            <a target="_blank" href="https://debora.netlify.app/">
+                <button type="button" class="w-1/6 inline-block rounded-full px-6 py-5 bg-yellow-500 text-white font-medium text-xl leading-tight shadow-md hover:bg-yellow-600 hover:shadow-lg focus:bg-yellow-600 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-yellow-700 active:shadow-lg transition duration-150 ease-in-out">
+                    Let's go
+                </button>
+            </a>
         </div>
     </div>
 </div>
 
 <style>
-    h1 {
-        color: whitesmoke !important;
-        font-size: 2.5em !important;
-    }
-
     .lead {
-        padding: 1em;
         font-size: 1.07em !important;
-        color: #c5c5c7;
-        line-height: 1.8;
         font-weight: 300;
     }
 
@@ -54,7 +48,7 @@
         border: none;
     }
 
-    button:focus {
+        button:focus {
             outline: none;
         }
 
