--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="w-full bg-white flex h-5/6 mt-20 bg-gray-50 rounded-lg shadow-2xl">
+﻿<div class="w-full bg-white flex h-5/6 mt-26 bg-gray-50 rounded-lg shadow-2xl">
     <div class="w-1/2 h-5/6 flex-col ">
         <div class="w-4/5 text-center h-2/6 flex items-center justify-center text-6xl font-black mx-auto leading-tight">
             Make managing your college easier
@@ -35,7 +35,7 @@
 
 <style>
     .vector {
-        background-image: url('../../Assets/Vectors/undraw_teaching_re_g7e3.svg');
+        background-image: url('https://img.freepik.com/vetores-gratis/reuniao-da-equipe-de-negocios-no-escritorio-ou-espaco-de-trabalho-compartilhado_74855-6913.jpg?w=1380&t=st=1664300329~exp=1664300929~hmac=6f4bcfc3cbbcae1e06b261d16bc37a969accb5f7188f1f65d0ba6fd5ee56fbf8');
         background-size: contain;
         background-repeat: no-repeat;
     }
