--- a/CollegeManager/Views/Course/Index.cshtml
+++ b/CollegeManager/Views/Course/Index.cshtml
@@ -1,57 +1,72 @@
-﻿@*<div ng-if="a= true" class="alert alert-success" role="alert" style="width: 70%; margin: auto; text-align:center;">
-        This is a success alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-    </div>
-    <div class="alert alert-danger" role="alert" style="width: 70%; margin: auto; text-align:center;">
-        This is a danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-    </div>*@
-<div class="container" ng-app="courses" ng-controller="courseCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
-    <div class="panel" style="border: none; background: #161b22;">
-        <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Courses</div>
-        <div class="panel-body" style="background: #0d1117; color: #8B949E;">
-            <button type="button" class="btn btn-primary" data-target="#AddCourse" data-toggle="modal" style="border-radius: 25px; width: 38px;">
-                <span class="glyphicon glyphicon-plus"></span>
+﻿<div class="container mt-20 bg-gray-50 shadow-2xl" ng-app="courses" ng-controller="courseCtrl" style="width: 80%; height: 75rem; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
+    <div class="panel bg-white">
+        <div class="panel-heading bg-gray-100 text-gray-700 font-medium border-0">Courses</div>
+        <div class="panel-body bg-white">
+            <button type="button" class="bg-green-700 rounded-full text-white p-2" data-target="#AddCourse" data-toggle="modal">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                </svg>
             </button>
-            <input id="search" shadow-none ng-model="search" style="background: #0a0d12; height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a course..." type="text" />
+            <input id="search" shadow-none ng-model="search" class="bg-gray-300 p-2" style="height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a course..." type="text" />
         </div>
 
         @*LIST*@
-        <table class="table" style="background: #0d1117; color: #161b22; border: none; ">
-            <thead style="background-color: #161b22; border: none; color: white; ">
-                <tr>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">ID</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Description</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Duration</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Category</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Teacher</th>
-                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Actions</th>
-                </tr>
-            </thead>
-            <tbody style="color: #8B949E; border: 0.2px solid #161b22;">
-                <tr ng-repeat="c in Courses| filter:search">
-                    <td class="text-center">{{c.CourseId}}</td>
-                    <td class="text-center">{{c.Name}}</td>
-                    <td class="text-center">{{c.Duration}}y</td>
-                    <td class="text-center">{{c.Category}}</td>
-                    <td class="text-center">{{c.TeacherName}}</td>
+        <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
+            <table class="w-full text-xl text-left text-gray-500">
+                <thead class="text-xl font-black text-gray-700 uppercase bg-gray-50">
+                    <tr>
+                        <th scope="col" class="py-3 px-6">
+                            ID
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Description
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Duration
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Category
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Teacher 
+                        </th>
+                        <th scope="col" class="py-3 px-6 text-center">
+                            ACTIONS
+                        </th>
+                    </tr>
+                </thead>
+                <tbody class="border-yellow-500">
+                    <tr ng-repeat="t in Courses | filter:search" class="bg-white border-0 hover:bg-gray-50 ">
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            {{t.CourseId}}
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.Name}}
+                        </td>
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            {{t.Duration}} years
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.Category}}
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.TeacherName}}
+                        </td>
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            <div class="flex items-center justify-center">
+                                <svg data-target="#AtualizarFuncionario" data-toggle="modal" ng-click="updateCourseById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 bg-yellow-600 rounded-full text-white p-2  hover:bg-yellow-900">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                                </svg>
+                                <svg data-target="#ExcluirFuncionario" id="btnExcluir" data-toggle="modal" ng-click="updateCourseById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 ml-2 bg-red-600 rounded-full text-white p-2  hover:bg-red-900">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                                </svg>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-                    <td class="text-center" style="width: 150px; padding: 0.5%;">
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
-                           data-target="#AtualizarFuncionario"
-                           data-toggle="modal" class="btn btn-success"
-                           ng-click="updateCourseById(c)">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                        </a>
-                        <a href="#" s style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
-                           data-target="#ExcluirFuncionario"
-                           id="btnExcluir"
-                           data-toggle="modal" class="btn btn-danger"
-                           ng-click="deleteCourseById(c)">
-                            <span class="glyphicon glyphicon-trash"></span>
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
 
         @*ADD COURSE*@
         <div class="modal" id="AddCourse" role="dialog" style="width: 100%; padding-top: 8rem;">
@@ -153,80 +168,80 @@
 </div>
 
 
-@section scripts {
-    <script src="~/AngularJsApp/Courses/Module.js"></script>
-    <script src="~/AngularJsApp/Courses/Service.js"></script>
-    <script src="~/AngularJsApp/Courses/Controller.js"></script>
-}
-
-<style>
-
-    ::-webkit-scrollbar {
-        width: 12px;
+    @section scripts {
+        <script src="~/AngularJsApp/Courses/Module.js"></script>
+        <script src="~/AngularJsApp/Courses/Service.js"></script>
+        <script src="~/AngularJsApp/Courses/Controller.js"></script>
     }
 
-    ::-webkit-scrollbar-track {
-        border-radius: 10px;
-    }
+    <style>
 
-    ::-webkit-scrollbar-thumb {
-        background: #161b22;
-        border-radius: 10px;
-    }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: green;
+        ::-webkit-scrollbar {
+            width: 12px;
         }
 
-    .form-group {
-        width: 100%;
-    }
-
-    #btnSave {
-        width: 15rem;
-        border: none;
-    }
-
-        #btnSave:focus {
-            outline: none;
+        ::-webkit-scrollbar-track {
+            border-radius: 10px;
         }
 
-    .modal-footer {
-        text-align: center;
-        margin-bottom: 3em;
-    }
+        ::-webkit-scrollbar-thumb {
+            background: #161b22;
+            border-radius: 10px;
+        }
 
-    input {
-        min-width: 70%;
-        margin: auto;
-        border-radius: 25px !important;
-    }
+            ::-webkit-scrollbar-thumb:hover {
+                background: green;
+            }
 
-    td {
-        border: 0.5px solid #161b22;
-        height: 5rem !important;
-        padding-top: 1.6em !important;
-    }
+        .form-group {
+            width: 100%;
+        }
 
-    .buttons {
-        padding: 1.2rem !important;
-    }
+        #btnSave {
+            width: 15rem;
+            border: none;
+        }
 
-    th {
-        font-weight: 300;
-    }
+            #btnSave:focus {
+                outline: none;
+            }
 
-    label {
-        color: whitesmoke !important;
-        font-weight: 300;
-        font-size: 0.9em !important;
-        margin-left: 6.1em;
-    }
+        .modal-footer {
+            text-align: center;
+            margin-bottom: 3em;
+        }
 
-    select {
-        min-width: 70%;
-        margin: auto;
-        width: 100%;
-        border-radius: 25px !important;
-    }
-</style>
+        input {
+            min-width: 70%;
+            margin: auto;
+            border-radius: 25px !important;
+        }
+
+        td {
+            border: 0.5px solid #161b22;
+            height: 5rem !important;
+            padding-top: 1.6em !important;
+        }
+
+        .buttons {
+            padding: 1.2rem !important;
+        }
+
+        th {
+            font-weight: 300;
+        }
+
+        label {
+            color: whitesmoke !important;
+            font-weight: 300;
+            font-size: 0.9em !important;
+            margin-left: 6.1em;
+        }
+
+        select {
+            min-width: 70%;
+            margin: auto;
+            width: 100%;
+            border-radius: 25px !important;
+        }
+    </style>
