--- a/CollegeManager/Views/Grade/Index.cshtml
+++ b/CollegeManager/Views/Grade/Index.cshtml
@@ -1,45 +1,78 @@
-﻿<div class="container" ng-app="grades" ng-controller="gradeCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
-    <div class="panel" style="background: #161b22;">
-        <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Grades</div>
-        <div class="panel-body" style="background: #0d1117; color: #8B949E; ">
-            <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
-                <span class="glyphicon glyphicon-plus"></span>
+﻿<div class="container mt-20 bg-gray-50 shadow-2xl" ng-app="grades" ng-controller="gradeCtrl" style="width: 80%; height: 75rem; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
+    <div class="panel-body bg-white">
+        <div class="panel-heading bg-gray-100 text-gray-700 font-medium border-0">Grades</div>
+        <div class="panel-body bg-white">
+            <button type="button" class="bg-green-700 rounded-full text-white p-2" data-target="#AdicionarFuncionario" data-toggle="modal">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 h-10">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                </svg>
             </button>
-            <input id="search" shadow-none ng-model="search" style="background: #0a0d12; height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a grade..." type="text" />
+            <input id="search" shadow-none ng-model="search" class="bg-gray-300 p-2" style="height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a grade..." type="text" />
         </div>
 
         @*LIST*@
-        <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
-            <thead style="background-color: #161b22; border: none; color: white; ">
-                <tr>
-                    <th class="text-center" style="border: 0.5px solid #161b22">ID</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Grade</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Student</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Subject</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Course</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Teacher</th>
-                    <th class="text-center" style="border: 0.5px solid #161b22">Actions</th>
-                </tr>
-            </thead>
-            <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
-                <tr ng-repeat="t in Grades | filter:search">
-                    <td class="text-center" style="border-right: 0.5px solid #161b22 !important;">{{t.GradeId}}</td>
-                    <td class="text-center">{{t.GradeDescription}}</td>
-                    <td class="text-center">{{t.StudentName}}</td>
-                    <td class="text-center">{{t.SubjectName}}</td>
-                    <td class="text-center">{{t.CourseName}}</td>
-                    <td class="text-center">{{t.CourseNameTeacher}}</td>
-                    <td class="text-center" style="width: 150px; padding: 0.5%;">
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateTeacher" data-toggle="modal" class="btn btn-success" ng-click="updateGradeById(t)">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                        </a>
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#DeleteTeacher" id="btnDelete" data-toggle="modal" class="btn btn-danger" ng-click="deleteGradeById(t)">
-                            <span class="glyphicon glyphicon-trash"></span>
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="overflow-x-auto relative shadow-md sm:rounded-lg">
+            <table class="w-full text-xl text-left text-gray-500">
+                <thead class="text-xl font-black text-gray-700 uppercase bg-gray-50">
+                    <tr>
+                        <th scope="col" class="py-3 px-6">
+                            ID
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Grade
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Student
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Subject
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Course
+                        </th>
+                        <th scope="col" class="py-3 px-6">
+                            Teacher
+                        </th>
+                        <th scope="col" class="py-3 px-6 text-center">
+                            ACTIONS
+                        </th>
+                    </tr>
+                </thead>
+                <tbody class="border-yellow-500">
+                    <tr ng-repeat="t in Grades | filter:search" class="bg-white border-0 hover:bg-gray-50 ">
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            {{t.GradeId}}
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.GradeDescription}}
+                        </td>
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            {{t.StudentName}}
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.SubjectName}}
+                        </td>
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            {{t.CourseName}}
+                        </td>
+                        <td class="py-4 px-6 border-gray-100">
+                            {{t.CourseNameTeacher}}
+                        </td>
+                        <td class="py-4 px-6 bg-gray-50 border-gray-100">
+                            <div class="flex items-center justify-center">
+                                <svg data-target="#UpdateTeacher" data-toggle="modal" ng-click="updateGradeById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 bg-yellow-600 rounded-full text-white p-2  hover:bg-yellow-900">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                                </svg>
+                                <svg data-target="#DeleteTeacher" id="btnDelete" data-toggle="modal" ng-click="deleteGradeById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 ml-2 bg-red-600 rounded-full text-white p-2  hover:bg-red-900">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                                </svg>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
 
         @*ADD GRADE*@
         <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 12rem;">
