--- a/CollegeManager/Views/Shared/_Layout.cshtml
+++ b/CollegeManager/Views/Shared/_Layout.cshtml
@@ -24,13 +24,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav float-right">
+                    <li class="mr-10 font-bold">@Html.ActionLink("Grades", "Index", "Grade")</li>
                     <li class="mr-6">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li class="mr-4">@Html.ActionLink("Teacher", "Index", "Teacher")</li>
                     <li class="mr-4">@Html.ActionLink("Students", "Index", "Student")</li>
                     <li class="mr-4">@Html.ActionLink("Course", "Index", "Course")</li>
                     <li class="mr-4">@Html.ActionLink("Subjects", "Index", "Subject")</li>
-                    <li class="mr-4">@Html.ActionLink("Grades", "Index", "Grade")</li>
-                    <li class="">@Html.ActionLink("Guide", "Index", "Guide")</li>
+                    <li class="mr-4">@Html.ActionLink("Guide", "Index", "Guide")</li>
                 </ul>
             </div>
         </div>
