--- a/CollegeManager/Views/Subject/Index.cshtml
+++ b/CollegeManager/Views/Subject/Index.cshtml
@@ -42,10 +42,10 @@
                         </td>
                         <td class="py-4 px-6 bg-gray-50 border-gray-100">
                             <div class="flex items-center justify-center">
-                                <svg data-target="#AtualizarFuncionario" data-toggle="modal" ng-click="updateSubjectById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 bg-yellow-600 rounded-full text-white p-2  hover:bg-yellow-900">
+                                <svg data-target="#AtualizarFuncionario" data-toggle="modal" ng-click="updateSubjectById(s)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 bg-yellow-600 rounded-full text-white p-2  hover:bg-yellow-900">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                                 </svg>
-                                <svg data-target="#ExcluirFuncionario" id="btnExcluir" data-toggle="modal" ng-click="deleteSubjectById(t)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 ml-2 bg-red-600 rounded-full text-white p-2  hover:bg-red-900">
+                                <svg data-target="#ExcluirFuncionario" id="btnExcluir" data-toggle="modal" ng-click="deleteSubjectById(s)" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 ml-2 bg-red-600 rounded-full text-white p-2  hover:bg-red-900">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                                 </svg>
                             </div>
@@ -59,9 +59,9 @@
         @*ADD SUBJECT*@
         <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 8rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
-                <div class="modal-content" style="background: #0d1117;">
+                <div class="modal-content" >
                     <div class="modal-header" style="border: none;">
-                        <h3 style="color: #C9D1D9;">New Subject</h3>
+                        <h3 class="text-gray-700">New Subject</h3>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
@@ -78,7 +78,7 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addSubject()">Confirm</button>
+                        <button type="button" class="btn btn-primary bg-green-700 hover:bg-green-900" id="btnSalvar" data-dismiss="modal" ng-click="addSubject()">Confirm</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Close</button>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="text-info">Update Subject</h3>
+                        <h3 class="text-info text-gray-700">Update Subject</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="AtualizarForm">
@@ -109,7 +109,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="updateSubject()">
+                        <button type="button" class="btn btn-primary bg-yellow-600 hover:bg-yellow-900" id="btnUpdate" data-dismiss="modal" ng-click="updateSubject()">
                             Update
                         </button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -123,7 +123,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
+                        <h3 class="text-info text-gray-500">Você tem certeza que deseja excluir o Funcionário?</h3>
                     </div>
                     <div class="modal-body">
                         <div>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteSubject(UpdatedSubjectId)">Excluir</button>
+                        <button type="button" class="btn btn-danger bg-red-600" data-dismiss="modal" ng-click="deleteSubject(UpdatedSubjectId)">Excluir</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
     }
 
     label {
-        color: whitesmoke !important;
+        color: gray !important;
         font-weight: 300;
         font-size: 0.9em !important;
         margin-left: 6.1em;
