--- a/CollegeManager/Views/Student/Index.cshtml
+++ b/CollegeManager/Views/Student/Index.cshtml
@@ -104,9 +104,9 @@
         @*UPDATE STUDENT*@
         <div class="modal" id="UpdateStudent" role="dialog" style="width: 100%; margin-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
-                <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
+                <div class="modal-content">
                     <div class="modal-header" style="border: none;">
-                        <h3 style="color: #C9D1D9;">Update Student</h3>
+                        <h3 class="text-gray-600">Update Student</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="UpdateForm">
@@ -128,7 +128,7 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" id="btnSave" class="btn btn-primary" data-dismiss="modal" ng-click="updateStudent()">
+                        <button type="button" id="btnSave" class="btn btn-primary bg-yellow-600 hover:bg-yellow-900" data-dismiss="modal" ng-click="updateStudent()">
                             Update
                         </button>
                         <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -138,20 +138,19 @@
         </div>
 
         @*DELETE STUDENT*@
-        <div class="modal" role="dialog" id="DeleteStudent" style="padding-top: 13em;">
-            <div class="modal-dialog">
-                <div class="modal-content" style="background: #0d1117;">
-                    <div class="modal-header" style="border: none; margin-top: 3em;">
-                        <h4 class="text-info" style="color: white; text-align: center;">Are you sure you want to delete this student?</h4>
+        <div class="modal" role="dialog" id="DeleteStudent" style="padding-top: 13em; ">
+            <div class="modal-dialog bg-gray-50">
+                <div class="modal-content text-gray-500">
+                    <div class="modal-header">
+                        <h4 class="text-info text-center text-gray-700">Are you sure you want to delete this student?</h4>
                     </div>
                     <div class="modal-body">
-                        <div style="color: white; text-align: center;">
-                            <p>ID: {{UpdatedStudentId}}</p>
+                        <div class="text-gray-700 w-2/5 mx-auto my-2">
                             <p>Student's name: {{UpdatedName}}</p>
                         </div>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" id="btnSave" class="btn btn-danger" data-dismiss="modal" ng-click="deleteStudent(UpdatedStudentId)">Delete</button>
+                        <button type="button" id="btnSave" class="btn btn-danger bg-red-600" data-dismiss="modal" ng-click="deleteStudent(UpdatedStudentId)">Delete</button>
                         <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
