--- a/CollegeManager/Views/Teacher/Index.cshtml
+++ b/CollegeManager/Views/Teacher/Index.cshtml
@@ -63,9 +63,9 @@
 
         <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
-                <div class="modal-content" style="background: #0d1117;">
+                <div class="modal-content">
                     <div class="modal-header" style="border: none;">
-                        <h3 style="color: #C9D1D9;">New Teacher</h3>
+                        <h3 class="text-gray-500">New Teacher</h3>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
@@ -85,7 +85,7 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addTeacher()">Confirm</button>
+                        <button type="button" class="btn btn-primary bg-green-700" id="btnSalvar" data-dismiss="modal" ng-click="addTeacher()">Confirm</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Close</button>
                     </div>
                 </div>
@@ -93,9 +93,9 @@
         </div>
         <div class="modal" id="UpdateTeacher" role="dialog" style="width: 100%; margin-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
-                <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
+                <div class="modal-content">
                     <div class="modal-header" style="border: none;">
-                        <h3 style="color: #C9D1D9;">Update Teacher</h3>
+                        <h3 class="text-gray-500">Update Teacher</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="AtualizarForm">
@@ -114,7 +114,7 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSave" data-dismiss="modal" ng-click="updateTeacher()">
+                        <button type="button" class="btn btn-primary bg-yellow-600 hover:bg-yellow-900" id="btnSave" data-dismiss="modal" ng-click="updateTeacher()">
                             Update
                         </button>
                         <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -124,18 +124,18 @@
         </div>
         <div class="modal" role="dialog" id="DeleteTeacher" style="padding-top: 13em;">
             <div class="modal-dialog">
-                <div class="modal-content" style="background: #0d1117;">
+                <div class="modal-content">
                     <div class="modal-header" style="border: none;">
-                        <h3 class="text-info" style="color: white;">Are you sure you want to delete this teacher?</h3>
+                        <h3 class="text-info text-gray-500">Are you sure you want to delete this teacher?</h3>
                     </div>
                     <div class="modal-body">
-                        <div style="color: white; text-align: center;">
+                        <div class="text-gray-700" style="text-align: center;">
                             <p>ID: {{UpdatedTeacherId}}</p>
                             <p>Teacher's name: {{UpdatedName}}</p>
                         </div>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteTeacher(UpdatedTeacherId)">Delete</button>
+                        <button type="button" class="btn btn-danger bg-red-600" data-dismiss="modal" ng-click="deleteTeacher(UpdatedTeacherId)">Delete</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
