--- a/CollegeManager/Views/Dashboard/Index.cshtml
+++ b/CollegeManager/Views/Dashboard/Index.cshtml
@@ -74,7 +74,7 @@
                 <div class="w-full h-full flex items-end">
                     <div class="w-1/6 text-center mx-auto" ng-repeat="t in Data">
                         <div ng-repeat="i in getNumber(t.StudentsInCourses) track by $index">
-                            <p class="w-12 mx-auto bg-cyan-700 h-8"></p>
+                            <p class="w-12 mx-auto bg-yellow-700 h-8"></p>
                         </div>
                         <hr />
                         <p class="mb-2 pb-2">
