--- a/CollegeManager/Views/Dashboard/Index.cshtml
+++ b/CollegeManager/Views/Dashboard/Index.cshtml
@@ -69,7 +69,7 @@
     </div>
     <div class="w-full h-2/3 bg-gradient-to-r from-yellow-500 via-yellow-400 to-slate-400">
         <div class="w-5/6 h-5/6 bg-white mx-auto border border-gray-200 rounded-lg shadow-2xl flex-col items-center justify-center">
-            <div class="h-14 p-3 text-base font-bold text-gray-200 text-uppercase flex"><p class="p-1 bg-yellow-700 rounded-full w-32 text-center">students</p> <p class="ml-2 p-1 bg-red-700 rounded-full w-32 text-center">teachers</p></div>
+            <div class="h-14 p-3 text-base font-bold text-gray-200 text-uppercase flex"><p class="p-1 bg-yellow-700 rounded-full w-32 text-center">students</p> @*<p class="ml-2 p-1 bg-red-700 rounded-full w-32 text-center">teachers</p>*@</div>
             <div class="w-5/6 h-5/6 rounded-lg border border-black flex flex-col mx-auto">
                 <div class="w-full h-full flex items-end">
                     <div class="w-1/6 text-center mx-auto" ng-repeat="t in Data">
